add IfNotPresent to k8s

--- a/k8s/party-service.yaml
+++ b/k8s/party-service.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: party-service
           image: aandrosiuk/party-service:v1
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
 
