change imagePullPolicy to Always

--- a/k8s/party-service.yaml
+++ b/k8s/party-service.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: party-service
           image: gog1/party-service:v2
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
 
